--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ollama = "*"
 langchain-ollama = "*"
 EbookLib = "*"
 gtts = "*"
+psutil = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
@@ -42,3 +43,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 aitools = "ai_tools.main:main"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::DeprecationWarning:faiss.*:",
+    "ignore:numpy.core._multiarray_umath is deprecated:DeprecationWarning"
+]
