--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        # For PyAudio
+        sudo apt-get install -y portaudio19-dev python3-pyaudio
+        # For Vosk (speech recognition)
+        sudo apt-get install -y libffi-dev
+        # For other potential dependencies
+        sudo apt-get install -y ffmpeg libavcodec-extra libespeak-dev
+    
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
@@ -40,7 +50,9 @@ jobs:
     
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      run: poetry install --no-interaction
+      run: |
+        poetry config installer.max-workers 2
+        poetry install --no-interaction --with dev,test
     
     - name: Lint with flake8
       run: |
@@ -92,6 +104,28 @@ jobs:
       with:
         python-version: '3.10'  # Use a stable version for binary building
     
+    - name: Install system dependencies (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        # For PyAudio
+        sudo apt-get install -y portaudio19-dev python3-pyaudio
+        # For Vosk (speech recognition)
+        sudo apt-get install -y libffi-dev
+        # For other potential dependencies
+        sudo apt-get install -y ffmpeg libavcodec-extra libespeak-dev
+    
+    - name: Install system dependencies (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install portaudio ffmpeg
+    
+    - name: Install system dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        choco install ffmpeg
+        # Windows PyAudio is handled via a wheel in the next step
+    
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
@@ -99,8 +133,16 @@ jobs:
         virtualenvs-create: true
         virtualenvs-in-project: true
     
+    - name: Install PyAudio wheel on Windows
+      if: matrix.os == 'windows-latest'
+      run: |
+        poetry run pip install pipwin
+        poetry run pipwin install pyaudio
+    
     - name: Install dependencies
-      run: poetry install --no-interaction
+      run: |
+        poetry config installer.max-workers 2
+        poetry install --no-interaction
     
     - name: Build binary
       run: |
