--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12']  # Removed 3.13 as it might not be fully supported yet
+        python-version: ['3.11', '3.12']  # Removed 3.13 as it might not be fully supported yet
 
     steps:
     - uses: actions/checkout@v3
