--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,10 @@ jobs:
       run: |
         poetry run pytest tests/
     
+    - name: Install pytest-cov for coverage reporting
+      run: |
+        poetry run pip install pytest-cov
+    
     - name: Generate coverage report
       run: |
         poetry run pytest --cov=ai_tools tests/ --cov-report=xml
