refactor: Update command handling in main function and adjust related tests

--- a/mypy.ini
+++ b/mypy.ini
@@ -16,3 +16,22 @@ ignore_missing_imports = True
 
 [mypy.plugins.gtts.*]
 ignore_missing_imports = True
+
+# Additional libraries without type stubs
+[mypy.pyaudio]
+ignore_missing_imports = True
+
+[mypy.vosk]
+ignore_missing_imports = True
+
+[mypy.SimConnect]
+ignore_missing_imports = True
+
+[mypy.gtts]
+ignore_missing_imports = True
+
+[mypy.requests]
+ignore_missing_imports = True
+
+[mypy.psutil]
+ignore_missing_imports = True
